// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button primary 1`] = `
.c0 {
  background-color: #000;
  border-radius: 4px;
  color: #fff;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 0.88rem;
  font-weight: 500;
  height: 40px;
  line-height: 38px;
  min-width: 200px;
  outline: none;
  overflow: hidden;
  padding: 0 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: all 0.2s ease 0s;
  transition: all 0.2s ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c0:hover {
  color: #000;
  border: 1px solid #000;
  background-color: #fff;
}

<button
  className="c0"
  disabled={false}
>
  Test
</button>
`;

exports[`Button secondary 1`] = `
.c0 {
  background-color: #000;
  border-radius: 4px;
  color: #fff;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 0.88rem;
  font-weight: 500;
  height: 40px;
  line-height: 38px;
  min-width: 200px;
  outline: none;
  overflow: hidden;
  padding: 0 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: all 0.2s ease 0s;
  transition: all 0.2s ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  color: #666;
  background-color: white;
  border: 1px solid #eaeaea;
}

.c0:hover {
  color: #000;
  border: 1px solid #000;
  background-color: #fff;
}

.c0:hover {
  color: #fff;
  border: 1px solid #000;
  background-color: #000;
}

<button
  className="c0"
  disabled={false}
>
  Test
</button>
`;
